--- a/AeroMessages/nuget.config
+++ b/AeroMessages/nuget.config
@@ -1,8 +1,5 @@
-<?xml version="1.0" encoding="utf-8"?>
+﻿<?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <packageSources>
-        <add key="AeroLocal" value="packages" />
-    </packageSources>
     <activePackageSource>
         <add key="All" value="(Aggregate source)" />
     </activePackageSource>
