Ignore irrelevant warnings
This ignores warnings about 'unused private variables', 'switch does not handle all possible inputs', 'Unused assigned variables'. The warnings are spammy and entirely in the generated code. Same goes for the switch input. We are not writing code in these script files that would generally necessitate these warnings.

--- a/AeroMessages/AeroMessages.csproj
+++ b/AeroMessages/AeroMessages.csproj
@@ -6,6 +6,7 @@
         <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
         <CompilerGeneratedFilesOutputPath>$(BaseIntermediateOutputPath)GeneratedFiles</CompilerGeneratedFilesOutputPath>
         <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
+        <NoWarn>0169,8509,0219</NoWarn>
     </PropertyGroup>
 
     <ItemGroup>
